style.css
body /* Added font, width, height, margin, padding, and overflow. -Edited 5/14 by Stephanie*/
 {
  background: black;
  font-family: "Rubik";
  width: 99%; 
  height: 99%; 
  margin: 0; 
  padding: 0;
  overflow: hidden;
}

#extLink /*For the block of text linking to SSB website*/ /* Edited font, size, position -Edited 5/14 by Stephanie*/
{
  /*border: 5px #0000CD solid;
  background-color: white;
  top: 0px;
  left: 1100px;*/
  font-family: 'Roboto', sans-serif;
  font-size: 20px;
  font-size: 1.25vw; /* automatically adjusted the font size according to the size of the window -Added 5/14 by Stephanie*/
  background-color: #DAA520;
  display: block;
  position: fixed;
  z-index: 100px; /* Z-index is the CSS style that controls how images or divs stack over each other. -Added 5/14 by Stephanie*/
  left: 315px;
  bottom: 0px;
  padding: 5px;
  width: 100%;
  height: 5%;
}
#extLink a
{
  text-align: center;
}

.box /* For the borders around the conveyor items*/
{
  position: absolute;
  height: 320px;
  width: 200px;
  border: 2px black solid;
  display: block;
}

.box div
{
  display:none;
}

.fill
{

  cursor: move;
  display: block;

}
.fill h1
{
  display: none;
}

.hold {
  border: solid 5px #ccc;
}

.empty {
  display: inline-block;
  height: 150px;
  width: 57px;
  margin: 10px;
  /* border: solid 3px salmon; */
  background: white;
}

.hovered {
  background: black;
  border-style: dashed;
}
.invisible
{
  display: none;
}

.modal
{
    display: none;
    position: fixed;
    z-index: 1;
    left: 0;
    top: 0;
    height: 100%;
    width: 100%;
    overflow: auto;
    background-color: rgba(0,0,0,0.5);
}
.modal-body
{
    padding: 10px 20px;
}
.modal-content
{
    background-color: white;
    margin: 20% auto;
    /* padding: 20px; */
    width: 70%;
    box-shadow: 0 5px 8px 0 rgba(0,0,0,0.17),0 7px 20px 0 rgba(0,0,0,0.2);
    animation-name: modalopen;
    animation-duration: 1s;
}

.modal-header h2, .modal-footer h3
{
    margin: 0;
}

.modal-header
{
    background: coral;
    padding: 15px;
    color: white;
    text-align: center;

}
.modal-footer
{
    background: coral;
    padding: 10px;
    color: white;
    text-align: center;
}

#closeBtn{
    color:white;
    float: right;
    font-size: 30px;
}
#closeBtn:hover,.closeBtn:focus{
    color: black;
    cursor: pointer;
}

.counter /* For the counter block for items remaining to sort */
{
  /*border: 5px solid red;*/
  /*background-color: white;
  background-color: #3CB371;
  opacity: 0.75;
  left:900px;*/
  font-family: 'Roboto', sans-serif; /*Adjust font family, size, and placement of the counter -Edited 5/14 by Stephanie*/
  font-size: 18px;
  text-align: center;
  top: 0px;
  right: 0px;
  position: fixed;
  padding: 8px;
  display: block;
}
.counter h3
{
  text-align: center;
}

ol { /*To change font family and size of ordered lists -Added 5/14 by Stephanie*/
  font-family: 'Roboto', sans-serif;
  font-size: 18px;
}

div.transbox { /*To create a transparent box on the side -Added 5/14 by Stephanie*/
  background-color: #ffffff;
  opacity: 0.7;
  filter: alpha(opacity=60); /* For IE8 and earlier */
  height:auto;
  top:0px;
  right:0px;
  width: 20%;
  position: fixed;
}

div.transbox p { /*To change font family and size of text inside the transparent box on the side -Added 5/14 by Stephanie*/

  font-family: 'Roboto', sans-serif;
  font-size: 15px;
  font-size: 1.25vw;
  color: #000000;
  text-align: center;
  padding: 5px;
}

.SSB /*For Smart Slug Bin Picture*/ 
{
  /* content: url('images/oldBinCopy.jpg'); */
  /*position: absolute;
  top: 0px;
  left:500px;
  border: 5px white solid;
  */
  position: fixed; /* Edited the position of the SSB picture. -Edited 5/14 by Stephanie*/
  top: 0px;
  left:315px;
  height: 100%;
  width: 90%;
  object-fit: contain;
}

.imgbox { /*.imgbox and .center-fit are to resize the image to fit the browser window -Added 5/14 by Stephanie*/
    display: grid;
    height: 100%;
}
.center-fit { /*.imgbox and .center-fit are to resize the image to fit the browser window -Added 5/14 by Stephanie*/
    max-width: 100%;
    max-height: 100vh;
    width: 100vw;
    height: auto;
    margin: auto;
}

